--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 hyper = { version = "0.14.21", features = ["full"] }
 hyper-tls = "0.5.0"
+once_cell = "1.18.0"
 tokio = { version = "1", features = ["full"] }
