--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 hyper = { version = "0.14.21", features = ["full"] }
 hyper-tls = "0.5.0"
 once_cell = "1.18.0"
+thiserror = "1.0.49"
 tokio = { version = "1", features = ["full"] }
