--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   create_release: 
+    name: Create release and Docker image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
