--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -1,4 +1,4 @@
-name: Release - tag and publish Docker image
+name: Release - Tag and publish Docker image
 
 on:
   workflow_dispatch:
@@ -9,19 +9,29 @@ on:
 
 jobs:
   create_release: 
+    name: Publish Docker image
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
     steps:
+      - name: Repository name to lowercase
+        id: string
+        uses: ASzc/change-string-case-action@v5
+        with:
+          string: ${{ github.repository }}
+
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Repository name to lowercase
-        id: string
-        uses: ASzc/change-string-case-action@v5
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
-          string: ${{ github.repository }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Docker images
         uses: docker/build-push-action@v5
