Add contents: write

--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -12,6 +12,7 @@ jobs:
     name: Publish Docker image
     runs-on: ubuntu-latest
     permissions:
+      contents: write
       packages: write
     steps:
       - name: Repository name to lowercase
