Try to remove unknown/unknown arch from image

--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -41,3 +41,4 @@ jobs:
           platforms: linux/amd64, linux/arm64
           tags: ghcr.io/${{ steps.string.outputs.lowercase }}:${{inputs.versionName}}
           push: true
+          provenance: false
