--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -42,3 +42,18 @@ jobs:
           tags: ghcr.io/${{ steps.string.outputs.lowercase }}:${{inputs.versionName}}
           push: true
           provenance: false
+    
+      - name: Initialize mandatory git config
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email noreply@github.com
+  
+      - name: Create release
+        id: create_release
+        uses: ncipollo/release-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ inputs.versionName }}
+          name: v${{ inputs.versionName }}
+          draft: false
+          prerelease: false
